--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -9,3 +9,5 @@ description = "A common API for Node Grove"
 
 [dependencies]
 prost = "0.13.4"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
