--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -11,3 +11,5 @@ description = "A common API for Node Grove"
 prost = "0.13.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+pbjson = "0.7"
+pbjson-types = "0.7"
