--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -8,8 +8,8 @@ repository = "https://github.com/shiyuecamus/node-grove-common-api.git"
 description = "A common API for Node Grove"
 
 [dependencies]
-prost = { version = "0.13", features = ["serde"] }
-prost-types = { version = "0.13", features = ["serde"] }
+prost = "0.13"
+prost-types = "0.13"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 pbjson = "0.7"
