--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -9,7 +9,7 @@ description = "A common API for Node Grove"
 
 [dependencies]
 prost = "0.13"
-prost-types = "0.13"
+prost-types = {version = "0.13", features = ["default","std"]}
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 pbjson = "0.7"
